screen_scraper.ipynb

--- a/screen_scraper.ipynb
+++ b/screen_scraper.ipynb
@@ -11,20 +11,25 @@
     "The problems with rigorous analysis:\n",
     "1. It's hard! \n",
     "2. It takes too much time! \n",
-    "3. It's expensive, the data is hard to access!\n",
+    "3. It's expensive to acquire data from financial institutions!\n",
     "\n",
-    "All of these things are true, but it doesn't have to be that way. \n",
+    "All of these things are true, which is why we'll use Python and pandas to scrape the web for the needed numbers, apply them to a market tested model, and export the output to Google Sheets! The idea for this project came from a client who was doing these calculations manually and wanted to automate his market analysis. He's been kind enough to allow me to share this with the open source community."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dependencies\n",
     "\n",
-    "This notebook is a guide through using the Discounted Cashflow (DCF) valuation model to value your basket of securities. This model uses past cash flows to determine whether a stock is overvalued or undervalued and by how much. \n",
+    "Before getting started, make sure your environment has all the modules listed below. The ones you don't have are available with a simple :pip install module_name: command (for instance - pip install pygsheets).\n",
     "\n",
-    "Accessing the data to feed the model can be highly time consuming, so this model also crawls Yahoo Finance for the relevant datapoints, cleasn and processes them, and provides them in a table format that makes them easy to compare. \n",
-    "\n",
-    "Yahoo Finance contains a bevy of other information that may be used to create other types of models. Once you understand how to collect and clean the data, you can process it with various models and compare their performance!"
+    "This contains everything you'll need to get up and running harvesting financial data!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +37,57 @@
     "from tqdm import tqdm #progress bars\n",
     "import pygsheets #export to Google Sheets\n",
     "import numpy as np #numerical processing\n",
-    "pd.set_option('max_columns', 500)"
+    "import datetime #enable datetime manipulation\n",
+    "pd.set_option('max_columns', 500) #more columns makes it easier to work with wide datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Model\n",
+    "\n",
+    "You can work with whatever model your data will permit you to access. We're using a version of [Discounted Cash Flow](https://www.valuespreadsheet.com/free-discounted-cash-flow-calculator-spreadsheet)(DCF) designed by Nick Kraackman, founder of [Value Spreadsheet](https://www.valuespreadsheet.com/). This is a value-investing strategy designed to evaluate long-term plays by valuing a company in terms of forecasted cash flows. A value-investing strategy is ideal for this type of algorithm, as screen scraping will naturally be much slower than High Frequency Trading (HFT) algos.\n",
+    "\n",
+    "His formula for DCF is as follows: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$DCF= fcf_y*m + \\sum_{i=1}^y fcf_i = \\frac{fcf_{i-1} * (1 + (g_{i-1}*gd))}{(1+r)}$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Variable|Term            |Found On|\n",
+    "|-----|-----|-----|\n",
+    "|DCF     |Discounted Cash Flow  |Calculate|\n",
+    "|fcf     |Free Cash Flow|Cash Flow Statement|\n",
+    "|m|Multiplier|User Defined|\n",
+    "|i|Current Year|Within Calculation|\n",
+    "|y|Max Year|User Defined|\n",
+    "|g|Growth Rate|User Defined|\n",
+    "|gd|Growth Decline Rate|User Defined|\n",
+    "|r|Discount Rate|User Defined|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The \"User Defined\" variables are assumptions it's up to the investor to make about the time value of money, but **we'll use the numbers that Nick Kraackman suggested in his article** to get started. \n",
+    "\n",
+    "The function below models this process in Python and can be called on its own or within another function. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,19 +116,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ingesting the Data to Feed the Model\n",
+    "\n",
+    "So the web scraping begins here. We grab, clean, and manipulate the needed data with a popular library data scientists use for cleanup: pandas. \n",
+    "\n",
+    "It's a big function, but what it's doing is simple. \n",
+    "\n",
+    "1. It pulls in a dictionary of stock ticker symbols paired with their brand names and categories. \n",
+    "2. It then scans multiple places on the web for a particular stock and searches through those pages for needed data elements. \n",
+    "    1. Try replacing the curly brackets in the URLs with the 'AAPL' stock ticker and browsing to those pages on your own to get a sense for the data that it's reading\n",
+    "3. The pd.read_html() function stores the tables on an HTML page as a list of DataFrames, which explains the slicing notation [0] you see after the calls to those functions\n",
+    "\n",
+    "The function goes through the process of finding, cleaning, and calculating DCF for each stock and displays a progress bar as it's downloading from the web. \n",
+    "\n",
+    "It may look like a huge function, but that's the nature of having to pick and clean so many individual points from different locations. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def trackr(stocks, margin_of_safety=.25, discount_rate=.1, growth_decline=.05, years=10, multiplier=12, yahoo_adjust=1000):\n",
     "    '''trackr reads a dictionary of stocks and their associated company names and categories and returns today's Yahoo Finance \n",
     "    stats on the corresponding stock as a row of values that can be appended to a dataframe'''\n",
-    "    \n",
-    "    import datetime\n",
-    "    import pandas as pd\n",
-    "    from tqdm import tqdm\n",
-    "    import numpy as np\n",
     "    \n",
     "    #Error Handling\n",
     "    if type(stocks) != dict:\n",
@@ -106,7 +171,7 @@
     "        #stock 1 gives us Previous Close, Open, Bid, Ask, Day's Range, 52 Week Range, Volume, and Avg. Volume\n",
     "        #stock 2 gives us Market Cap, Beta (3Y Monthly), PE Ratio (TTM), EPS (TTM), Earnings Date, Forward Dividend & Yield, Ex-Dividend Date, 1y Target Est\n",
     "\n",
-    "        stock1 = quote_data[0].transpose() #Transpose data into meaningful arrangement\n",
+    "        stock1 = quote_data[0].transpose() #Transpose data into meaningful arrangement.\n",
     "        stock1.columns = stock1.iloc[0] #set new header row\n",
     "        stock1.drop(0, inplace=True) #drop the old\n",
     "\n",
@@ -201,14 +266,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grabbing the Stocks and Presenting the Data\n",
+    "\n",
+    "The dictionary below contains the stocks my client requested to track. Using a list to store the company name and multiple categories was simple enough to get the job done and keep him apprised of all the data he wanted on each company, as his goal is to sort and filter on his own criteria in a Google Sheet. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Dictionary of stocks requested to track. Key is ticker symbol, list position 1 is name, and subsequent positions are categories to which the company belongs.\n",
     "\n",
-    "bk_stocks = {'aapl': ['Apple', 'Cell Phone'], \n",
+    "br_stocks = {'aapl': ['Apple', 'Cell Phone'], \n",
     "             '005930.KS': ['Samsung', 'Cell Phone'],\n",
     "             't': ['ATT', 'Cell Service Provider', 'ISP'],\n",
     "             'vz': ['Verizon', 'Cell Service Provider'],\n",
@@ -242,20 +316,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we call the function based on his requests."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 31/31 [01:32<00:00,  2.78s/it]\n"
+      "100%|██████████| 31/31 [01:49<00:00,  5.98s/it]\n"
      ]
     }
    ],
    "source": [
-    "dcf_trackr = trackr(bk_stocks)"
+    "dcf_trackr = trackr(br_stocks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Presenting to Google Sheets\n",
+    "\n",
+    "The most important part is presenting the data in a way that's usable to the client. His preference was to receive the data in Google Sheets.\n",
+    "\n",
+    "This called for reducing the DataFrame to the specific columns the client needed to see and establishing an easy way to understand how to make a decision based on the DCF. That column is the DCF/Price multiple, which simply divides the current DCF value price by the previous day's stock price. This is a \"Higher is Better\" scenario, and any value greater than 1 means the DCF is telling us the company may be undervalued, and thus a potential buy. "
    ]
   },
   {
@@ -267,6 +359,13 @@
     "quotes = dcf_trackr[['Ticker', 'Name', 'Categories', 'Previous Close', 'Market Cap', 'Cash Flow', \n",
     "                     'CapEx', 'Free Cash Flow', 'Cash On Hand', 'Long Term Debt', 'Approx Shares Outstanding', \n",
     "                     'Conservative Analyst 5y', 'DCF Value', 'DCF Share Price', 'DCF/Price Multiple', 'Reporting Period']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then publish to Google Sheets using pygsheets in a process outlined [here](https://www.twilio.com/blog/2017/02/an-easy-way-to-read-and-write-to-a-google-spreadsheet-in-python.html)."
    ]
   },
   {
@@ -282,6 +381,13 @@
     "sh = gc.open(sheet_name)\n",
     "wks = sh[0]\n",
     "wks.set_dataframe(quotes.reset_index(), (1,1)) #specifies cell coordinates of upper leftmost cell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The client is looking at the stocks that DCF indicates are undervalued and performing further analysis to make a decision on purchases, and with this script, you can too!"
    ]
   }
  ],
