screen_scraper.ipynb

--- a/screen_scraper.ipynb
+++ b/screen_scraper.ipynb
@@ -167,9 +167,9 @@
     "        balance_data = pd.read_html(balance) #grab balance sheet\n",
     "        analysis_data = pd.read_html(analysis) #grab analysis data\n",
     "\n",
-    "        #The HTML tables parse into a list. It will take some cleanup to prepare the list for a dataframe\n",
-    "        #stock 1 gives us Previous Close, Open, Bid, Ask, Day's Range, 52 Week Range, Volume, and Avg. Volume\n",
-    "        #stock 2 gives us Market Cap, Beta (3Y Monthly), PE Ratio (TTM), EPS (TTM), Earnings Date, Forward Dividend & Yield, Ex-Dividend Date, 1y Target Est\n",
+    "        '''The HTML tables parse into a list. It will take some cleanup to prepare the list for a dataframe\n",
+    "        stock 1 gives us Previous Close, Open, Bid, Ask, Day's Range, 52 Week Range, Volume, and Avg. Volume\n",
+    "        stock 2 gives us Market Cap, Beta (3Y Monthly), PE Ratio (TTM), EPS (TTM), Earnings Date, Forward Dividend & Yield, Ex-Dividend Date, 1y Target Est'''\n",
     "\n",
     "        stock1 = quote_data[0].transpose() #Transpose data into meaningful arrangement.\n",
     "        stock1.columns = stock1.iloc[0] #set new header row\n",
