screen_scraper.ipynb

--- a/screen_scraper.ipynb
+++ b/screen_scraper.ipynb
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then publish to Google Sheets using pygsheets in a process outlined [here](https://www.twilio.com/blog/2017/02/an-easy-way-to-read-and-write-to-a-google-spreadsheet-in-python.html)."
+    "We then publish to Google Sheets using pygsheets in a process outlined [here](https://pygsheets.readthedocs.io/en/stable/)."
    ]
   },
   {
@@ -387,7 +387,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The client is looking at the stocks that DCF indicates are undervalued and performing further analysis to make a decision on purchases, and with this script, you can too!"
+    "The client is looking at the stocks that DCF indicates are undervalued and performing further analysis to make a decision on purchases, and with this script, you can too!\n",
+    "\n",
+    "A few use cases that could be helpful:\n",
+    "- Copy the script and input stocks that you would like to track\n",
+    "- Use jupyter nbconvert and argparser to save this as an executable you can run from the command line\n",
+    "- Automate the operation in a way that you see fit\n",
+    "- Find more models and hunt for more data on the web, even breaking out of what's on Yahoo Finance!"
    ]
   }
  ],
